# society-simulation

./: .gitignore  README.md  pyproject.toml
examples/: network_herding.json  network_herding_mock_llm.json  network_herding_openai_compatible.json  sequential_cascade.json
experiments/: event_driven_congestion_pricing.json  event_driven_congestion_pricing_gpt54_mini_memory_on_pilot.json  event_driven_congestion_pricing_gpt54_mini_pilot.json  instagram_feed_policy_sweep.json  instagram_local_coffee_ad_reach_gpt54_mini_pilot.json  instagram_local_coffee_ad_reach_sweep.json  instagram_social_lite_mock.json  instagram_visible_endorsement_sweep.json  network_topology_sweep.json  openai_mini_small_social_herding.json  public_private_shock_gpt54_mini_pilot.json  public_private_shock_speech_decision_gpt54_mini_pilot.json
tests/: __init__.py  test_cli.py  test_config.py  test_event_config.py  test_event_memory.py  test_event_metrics.py  test_event_models.py  test_event_policy.py  test_event_replay.py  test_event_runner.py  test_event_scheduling.py  test_graph.py  test_llm_policy.py  test_metrics.py  test_network_config.py  test_network_metrics.py  test_network_policies.py  test_network_replay.py  test_network_runner.py  test_network_scheduling.py  test_policies.py  test_replay.py  test_runner.py  test_scheduling.py  test_signals.py  test_social_media_ads.py  test_social_media_config.py  test_social_media_feed.py  test_social_media_metrics.py  test_social_media_models.py  test_social_media_policy.py  test_social_media_replay.py  test_social_media_runner.py  test_sweep_analysis.py  (+5 more)
(+92 files in other folders)
